# ovv-iso-chat

./: .gitignore  README.md  admin_panel.py  app_chainlit.py  app_mesop.py  app_mesop_test.py  avvia_chat.bat  chainlit.md  docker-compose.yml  env.example  fastapi_app.py  pyproject.toml  requirements.txt  requirements_minimali.txt  requirements_temp.txt
.chainlit/: config.toml
.cursor/rules/: 00-anti-errors.mdc  04-rag-lowvram.mdc  05-ovv-rules.mdc  07-memory-bayesian.mdc  08-rag-pipeline.mdc  09-ingestion-iso.mdc  (+4 more)
admin/: __init__.py  auth.py
benchmarks/: .gitkeep  benchmark_models.py
config/: config.yaml  document_metadata.json  glossary.json  ps_mr_context.json  semantic_metadata.json  tools_mapping.json  users.json  users.json.example
data/: extracted_terms.json
docs/: LEDGER_changes.md  PARITY_matrix.md  PLAN_mesop_unification.md  README.md
scripts/: build_knowledge_graph.py  copy_pdfs.ps1  extract_ps_context.py  generate_semantic_metadata.py  generate_tools_mapping.py  reindex_with_enrichment.py  search_wcm.py  setup.ps1
src/: __init__.py  main.py
templates/: chat.html
tests/: __init__.py  test_acronym_extractor.py  test_chunk_enrichment.py  test_conversation_logger.py  test_disambiguation.py  test_disambiguator.py  test_dual_embedding.py  test_gap_detector.py  test_glossary_injection.py  test_graph_rag.py  test_hyde.py  test_multi_agent.py  test_path_manager.py  test_semantic_retrieval.py  test_setup.py  test_smoke.py  test_synthetic_chunker.py  test_teach_assistant.py  test_tool_suggester.py  test_unified_chunker.py  test_validator_agent.py
(+102 files in other folders)
